# 21sh

./: .gitignore  CMakeLists.txt  Makefile  README.md
builtin/: bltn_cd.c  bltn_echo.c  bltn_env.c  bltn_exit.c  bltn_setenv.c  bltn_unsetenv.c
includes/: builtin.h  lexer.h  shell.h  shell21.h
libft/: Makefile  README.md  author  ft_abs.c  ft_addtotab.c  ft_atoi.c  ft_bzero.c  ft_charappend.c  ft_dlstadd.c  ft_dlstdel.c  ft_dlstnew.c  ft_error_msg.c  ft_exit.c  ft_free_array.c  ft_free_string_tab.c  ft_freetab.c  ft_intlen.c  ft_intputchar.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isnumber.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstappend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  (+60 more)
read_line/: buffer.c  clear.c  copy_cut.c  cursor_moves.c  goto.c  interpret.c  prompt.c  read_line.c  term.c
scripts/: add_h.sh  settings_bash.terminal  unset_env_check.sh
src/: cmd_manipulation.c  error_handling.c  exec_cmd_ops.c  exit_shell.c  expansions.c  init.c  init_env.c  manage_history.c  move_commands.c  path_ops.c  shell.c  signals.c
srcs/: del_head.sh  exit_shell.c  init.c  main.c  signals.c  temp.txt
srcs/builtin/: cd.c  echo.c  env.c  exit.c  history.c  launcher.c  setenv.c  unsetenv.c
srcs/exec/: agreg_heredoc.c  execute.c  exit_status.c  expansion.c  heredoc_expand_escape.c  open_dup.c  path.c  pipeline.c  quotes_removal.c  redirect.c  simple_cmd.c  std_fd.c
srcs/lexer/: get_operator.c  get_word.c  quotes.c  (+4 more)
(+19 files in other folders)
